eklenen ve cikarilan testler tarihceye yansiyor

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,3 +1,4 @@
 # English strings go here for Rails i18n
 en:
-  issue_tests: "Issue Tests"
+  issue_tests: Issue Tests
+  field_issue_tests: Issue Tests
