eklenen ve cikarilan testler tarihceye yansiyor 2

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,3 +2,5 @@
 en:
   issue_tests: Issue Tests
   field_issue_tests: Issue Tests
+  text_issue_tests_added: ADDED
+  text_issue_tests_removed: REMOVED
