test sonuclari islenecek

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -4,3 +4,4 @@ en:
   field_issue_tests: Issue Tests
   text_issue_tests_added: ADDED
   text_issue_tests_removed: REMOVED
+  text_issue_code_artifacs: Code Artifacts
