--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -4,3 +4,4 @@ tr:
   field_issue_tests: Görev Testleri
   text_issue_tests_added: EKLENEN
   text_issue_tests_removed: ÇIKARILAN
+  text_issue_code_artifacs: Kod Çıktıları
