urun hattına giriyor

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -5,3 +5,4 @@ en:
   text_issue_tests_added: ADDED
   text_issue_tests_removed: REMOVED
   text_issue_code_artifacs: Code Artifacts
+  text_issue_test_results: Test Results
