--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -5,3 +5,4 @@ tr:
   text_issue_tests_added: EKLENEN
   text_issue_tests_removed: ÇIKARILAN
   text_issue_code_artifacs: Kod Çıktıları
+  text_issue_test_results: Test Sonuçları
