--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -6,3 +6,4 @@ en:
   text_issue_tests_removed: REMOVED
   text_issue_code_artifacs: Code Artifacts
   text_issue_test_results: Test Results
+  text_git_tag_description_empty: Git tag doesn't have any description points artifacts.
