--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -7,3 +7,5 @@ tr:
   text_issue_code_artifacs: Kod Çıktıları
   text_issue_test_results: Test Sonuçları
   text_git_tag_description_empty: Etiketin açıklamasında üretilen çıktı bilgisine erişilemedi
+  text_exception_name: İstisna
+  text_exception_occured_name: İstisna Oluştu
