--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -15,3 +15,23 @@ tr:
   text_sync_kiwi_tests: Eşleştir
   button_sync_kiwi_tests: Kiwi Test Senaryolarını Eşleştir
   label_issue_code_artifacts_tags: Etiketler
+  text_revision_comment: Kod Revizyon Yorumu
+
+  text_test_run_status_didnt_run_with_artifact: Test senaryosu henüz mevcut dosyayla koşulmadı
+  text_test_run_status_idle: Test senaryosu BOŞTA 
+  text_test_run_status_idle_count: Test senaryosunun BOŞTA olduğu sayı
+  text_test_run_status_running: Test senaryosu KOŞUYOR 
+  text_test_run_status_running_count: Test senaryosunun KOŞUYOR olduğu sayı
+  text_test_run_status_paused: Test senaryosu DURDURULDU
+  text_test_run_status_paused_count: Test senaryosunun DURDURULDUĞU sayı
+  text_test_run_status_passed: Test senaryosu ES GEÇİLDİ
+  text_test_run_status_passed_count: Test senaryosunun ES GEÇİLDİĞİ sayı
+  text_test_run_status_failed: Test senaryosu BAŞARISIZ oldu 
+  text_test_run_status_failed_count: Test senaryosunun BAŞARISIZ olduğu sayı
+  text_test_run_status_blocked: Test senaryosu ENGELLENMİŞ
+  text_test_run_status_blocked_count: Test senaryosunun ENGELLENMİŞ olduğu sayı
+  text_test_run_status_error: Test senaryosu koşusunda HATA oldu 
+  text_test_run_status_error_count: Test senaryosu koşusunda HATANIN oluştuğu sayı
+  text_test_run_status_waived: Test senaryosu koşusundan VAZGEÇİLDİ
+  text_test_run_status_waived_count: Test senaryosunun koşusundan VAZGEÇİLDİĞİ sayı
+
